// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="soui-switch-indicator"
    dir="ltr"
  />
  <div
    class="soui-switch-content"
  >
    <div
      class="soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="soui-switch-wrapper soui-switch-wrapper-checked soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="soui-switch-loading"
      />
    </div>
    <div
      class="soui-switch-content"
    >
      <div
        class="soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="soui-switch-wrapper soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="soui-switch-loading"
      />
    </div>
    <div
      class="soui-switch-content"
    >
      <div
        class="soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="soui-switch-wrapper soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="soui-switch-content"
    >
      <div
        class="soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="soui-switch-content"
    >
      <div
        class="soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="soui-switch-wrapper soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="soui-switch-content"
    >
      <div
        class="soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="soui-switch-wrapper soui-switch-wrapper-checked soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="soui-switch-content"
    >
      <div
        class="soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="soui-switch-wrapper soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="soui-switch-content"
    >
      <div
        class="soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
